# django-allauth-ui

./: .gitignore  .mise.toml  .pylintrc  LICENSE  MANIFEST.in  README.md  build.py  input.css  manage.py  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js
.github/workflows/: ci-cd.yml
allauth_ui/: apps.py
allauth_ui/locale/es/LC_MESSAGES/: django.po
allauth_ui/locale/fr/LC_MESSAGES/: django.po
allauth_ui/locale/it/LC_MESSAGES/: django.mo  django.po
allauth_ui/locale/pt_BR/LC_MESSAGES/: django.po
allauth_ui/locale/tr/LC_MESSAGES/: django.po
allauth_ui/static/allauth_ui/: input.css
allauth_ui/templates/: components.yaml
allauth_ui/templates/account/: _button.html  _links.html  _non_field_errors.html  _render_form.html  account_inactive.html  base.html  base_reauthenticate.html  confirm_login_code.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_reset_key_message.html  password_set.html  reauthenticate.html  request_login_code.html  signup.html  signup_closed.html  verification_sent.html
allauth_ui/templates/allauth/layouts/: base.html
allauth_ui/templates/components/: container.html  form.html  form_field.html
allauth_ui/templates/helpers/: messages.html
allauth_ui/templates/helpers/messages/: error.html
allauth_ui/templates/mfa/: authenticate.html  index.html  reauthenticate.html
allauth_ui/templates/mfa/recovery_codes/: generate.html  index.html
allauth_ui/templates/mfa/totp/: activate_form.html  deactivate_form.html
allauth_ui/templates/socialaccount/: authentication_error.html  connections.html  login.html  signup.html
allauth_ui/templates/socialaccount/snippets/: login.html  provider_list.html  social_login.html
allauth_ui/templates/usersessions/: usersession_list.html
allauth_ui/templatetags/: allauth_ui.py
sample_deployment/: .envrc  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
sample_deployment/sample_deployment/: asgi.py  settings.py  urls.py  wsgi.py
sample_deployment/sample_deployment/example/: apps.py  views.py
sample_deployment/sample_deployment/example/templates/example/: base.html  home.html  social_metadata.html
sample_deployment/sample_deployment/static/: theme.js
sample_deployment/sample_deployment/templates/account/: signup_closed.html
sample_deployment/sample_deployment/templates/allauth/layouts/: base.html
sample_deployment/sample_deployment/theme/: apps.py
sample_deployment/sample_deployment/theme/static_src/: package-lock.json  package.json  tailwind.config.js
sample_deployment/sample_deployment/theme/static_src/src/: styles.css
tests/: apps.py  settings.py  tests.py  urls.py
tests/locale/es/LC_MESSAGES/: django.po
tests/management/commands/: create_test_providers.py
theme/static_src/: package-lock.json
