[tool.poetry]
name = "django-allauth-ui"
version = "0.1.4"
description = ""
authors = ["Dani Hodovic <you@example.com>"]
license = "MIT"
packages = [
    { include = "allauth_ui" },
]
include = ["allauth_ui/static/allauth_ui/output.css"]

[tool.poetry.dependencies]
python = ">=3.8,<4.2"
django-widget-tweaks = "^1.4.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "2.10.0"
pytest-django = "4.1.0"
black = "20.8b1"
mypy = "0.782"
mypy-extensions = "0.4.3"
pylint = "^2.12.2"
pylint-django = "^2.5.0"
ptipython = "^1.0.1"
ptpython = "2.0.4"
django-extensions = "^3.1.5"
django-browser-reload = "^1.3.0"
pudb = "2019.1"
django-debug-toolbar = "^3.2.4"
Werkzeug = "^2.0.2"
Django = "^4.0.2"
django-toolset = "^0.1.5"

[tool.poetry.group.dev.dependencies]
django-click = "^2.3.0"
django-allauth = {git = "https://github.com/danihodovic/django-allauth.git", rev = "add-wahoo"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
