[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-allauth-ui"
version = "0.2.2"
description = ""
authors = ["Dani Hodovic <you@example.com>"]
license = "MIT"
packages = [
    { include = "allauth_ui" },
]
include = ["allauth_ui/static/allauth_ui/output.css"]

[tool.poetry.dependencies]
python = ">=3.8,<4.2"
django-widget-tweaks = "^1.4.12"
django-rosetta = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "2.10.0"
pytest-django = "4.1.0"
black = "^23.3.0"
mypy = "^1.3.0"
mypy-extensions = "1.0.0"
pylint = "^2.12.2"
pylint-django = "^2.5.0"
ptipython = "^1.0.1"
ptpython = "2.0.4"
django-extensions = "^3.1.5"
django-browser-reload = "^1.3.0"
pudb = "2019.1"
django-debug-toolbar = "^3.2.4"
Werkzeug = "^2.0.2"
Django = "^4.0.2"
django-toolset = "^0.1.5"

[tool.poetry.group.dev.dependencies]
django-click = "^2.3.0"
django-allauth = "<0.58.0"
